--- a/WebRTC/annotate.html
+++ b/WebRTC/annotate.html
@@ -14,12 +14,31 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <link rel="stylesheet" type="text/css" href="mainstyles.css">
+
+        <!--           ---------------------------- Firebase things -->
+
+        <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.8.6/firebase-database.js"></script>
+        <script>
+          // Initialize Firebase
+          var config = {
+            apiKey: "AIzaSyAggWr9t0RNu2u5XzDSuZp85EYxB9G8tyI",
+            authDomain: "lsvav-ece420.firebaseapp.com",
+            databaseURL: "https://lsvav-ece420.firebaseio.com",
+            projectId: "lsvav-ece420",
+//            storageBucket: "lsvav-ece420.appspot.com",
+//            messagingSenderId: "542547803047" -->
+          };
+          firebase.initializeApp(config);
+        </script>
+
+        <!--           ---------------------------- end Firebase things -->
+
         <script>
             document.createElement('article');
             document.createElement('footer');
         </script>
-
-        <script src="/firebase.js"> </script>
         <script src="MediaStreamer.js"> </script>
         <script src="annotate_app.js"></script>
     </head>
@@ -34,7 +53,7 @@
             <section class="experiment" style="text-align: center;">
 				<div id="video-div" class="video-div">
                 <video id="video-player" controls>
-                  <source src="DSC_0557.mov" type="video/mp4"></video>
+                  <source src="DSC_0557.mp4" type="video/mp4"></video>
 <!--                <source src="phpE7B2.tmp" type="video/mp4"></video> -->
                 </div>
 <!--				<div>
