--- a/WebRTC/annotate.html
+++ b/WebRTC/annotate.html
@@ -53,7 +53,7 @@
             <section class="experiment" style="text-align: center;">
 				<div id="video-div" class="video-div">
                 <video id="video-player" controls>
-                  <source src="DSC_0557.mp4" type="video/mp4"></video>
+                  <source src="../Videos/DSC_0557.mp4" type="video/mp4"></video>
 <!--                <source src="phpE7B2.tmp" type="video/mp4"></video> -->
                 </div>
 <!--				<div>
