--- a/WebRTC/annotate.html
+++ b/WebRTC/annotate.html
@@ -46,15 +46,14 @@
     <body>
         <article>
             <header style="text-align: center;">
-                <h1> Temp Video Title</h1>
-                <p> Video Annotation and Visualisation Application </p>
+              <p> Video Annotation and Visualisation Application </p>
+                <h1> Temp Video Title </h1>
             </header>
 
             <section class="experiment" style="text-align: center;">
 				<div id="video-div" class="video-div">
                 <video id="video-player" controls>
-                  <source src="../Videos/DSC_0557.mp4" type="video/mp4"></video>
-<!--                <source src="phpE7B2.tmp" type="video/mp4"></video> -->
+                  <source src="../Videos/BackCameraClips/Eating1Round1.mp4" type="video/mp4"></video>
                 </div>
 <!--				<div>
                     <a href="phpE7B2.tmp" title="Download WebM file to stream as pre-recorded media" download="chrome.webm" target="_blank">Download WebM video</a>
