--- a/AppV2/myAnnotate.html
+++ b/AppV2/myAnnotate.html
@@ -14,41 +14,43 @@
         <div id="create-new-box">
             <button id="create-new">CREATE NEW LABEL</button>
             <div id="new-labels">
-
+                <!-- JavaScript adds stuff here -->
             </div>
         </div>
 
         <figure id="videoContainer" data-fullscreen="false">
-
             <div id='vid-div'>
-                <video id="video" class="video">
-                    <source src="https://ece46medsrv.ece.unm.edu/non_irb_videos/Antonia/BackCameraClips/Eating1Round1_q2.mp4" type="video/mp4">
-
+                <video id="video" class="video" src="https://ece46medsrv.ece.unm.edu/non_irb_videos/Antonia/BackCameraClips/Eating1Round1_q2.mp4">
                 </video>
             </div>
+
             <div id="video-controls" class="controls" data-state="hidden">
                 <button id="playpause" type="button" data-state="play">Play/Pause</button>
                 <button id="stop" type="button" data-state="stop">Stop</button>
-                <div id="current-time"></div>
-                <div class="progress">
 
+                <div id="current-time"></div>
+
+                <div class="progress">
                     <progress id="progress" value="0" min="0">
                         <span id="progress-bar"></span>
                     </progress>
-
                 </div>
+
                 <div id="vid-duration"></div>
+
                 <button id="mute" type="button" class="sbut" data-state="mute">Mute/Unmute</button>
                 <button id="volinc" type="button" class="sbut" data-state="volup">Vol+</button>
                 <button id="voldec" type="button" class="sbut" data-state="voldown">Vol-</button>
                 <button id="fs" type="button" class="sbut" data-state="go-fullscreen">Fullscreen</button>
             </div>
-
         </figure>
+        <!-- Firebase Database Setup -->
+        <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
+
         <script src="script.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-
 
         <script>
             window.setInterval(function(t){
@@ -57,11 +59,8 @@
                     var vid_duration = video.duration;
                     duration.firstChild.nodeValue = vid_duration;
                     clearInterval(t);
-
-
                 }
             },500);
-
         </script>
     </body>
 </html>
