--- a/AppV2/myAnnotate.html
+++ b/AppV2/myAnnotate.html
@@ -20,7 +20,7 @@
 
         <figure id="videoContainer" data-fullscreen="false">
             <div id='vid-div'>
-                <video id="video" class="video" src="https://ece46medsrv.ece.unm.edu/non_irb_videos/Antonia/BackCameraClips/Eating1Round1_q2.mp4">
+                <video id="video" class="video">
                 </video>
             </div>
 
