--- a/loadFileTree/loadPage.html
+++ b/loadFileTree/loadPage.html
@@ -38,7 +38,7 @@
 			}
 
 			.fileTreeDiv {
-				width: 800px;
+				width: 300px;
 				height: 400px;
 				border-top: solid 1px #BBB;
 				border-left: solid 1px #BBB;
@@ -50,6 +50,7 @@
 			}
 
 			.videoAddressDiv {
+				display: block;
 				width: 800px;
 			}
 
@@ -63,9 +64,9 @@
 
 			$(document).ready( function() {
 
-				$('#fileTree').fileTree({ root: '/home/edijco5/public_html/testArea/', folderEvent: 'click', expandSpeed: 300, collapseSpeed: 300, multiFolder: false }, function(file) {
+				$('#fileTree').fileTree({ root: '/home/edijco5/public_html/testArea/database/', folderEvent: 'click', expandSpeed: 300, collapseSpeed: 300, multiFolder: true }, function(file) {
 					var videoAddr = document.getElementById("videoAddress");
-            		videoAddr.value = file;
+            		videoAddr.value = file.replace("/home/edijco5/public_html/testArea/database/","https://ece46medsrv.ece.unm.edu/");
 				});
 
 			});
@@ -84,7 +85,7 @@
 			<h2>Choose a video from the folder tree below</h2>
 			<div id="fileTree" class="fileTreeDiv"></div>
 		</div>
-		<div>
+		<div style="display: block; position: fixed; top: 560px; left: 30px;">
 			<textarea id="videoAddress" class="videoAddressDiv">
 			</textarea>
 			<button onclick="loadVideo()">Select</button>
