--- a/loadFileTree/loadPage.html
+++ b/loadFileTree/loadPage.html
@@ -49,7 +49,7 @@
 				padding: 5px;
 			}
 
-			.videoAddressDiv {
+			.videoPathDiv {
 				display: block;
 				width: 800px;
 			}
@@ -65,8 +65,8 @@
 			$(document).ready( function() {
 
 				$('#fileTree').fileTree({ root: '/home/edijco5/public_html/testArea/database/', folderEvent: 'click', expandSpeed: 300, collapseSpeed: 300, multiFolder: true }, function(file) {
-					var videoAddr = document.getElementById("videoAddress");
-            		videoAddr.value = file.replace("/home/edijco5/public_html/testArea/database/","https://ece46medsrv.ece.unm.edu/");
+					var videoPath = document.getElementById("videoPath");
+            		videoPath.value = file.replace("/home/edijco5/public_html/testArea/database/","https://ece46medsrv.ece.unm.edu/");
 				});
 
 			});
@@ -86,11 +86,17 @@
 			<div id="fileTree" class="fileTreeDiv"></div>
 		</div>
 		<div style="display: block; position: fixed; top: 560px; left: 30px;">
-			<textarea id="videoAddress" class="videoAddressDiv">
+			<textarea id="videoPath" class="videoPathDiv">
 			</textarea>
 			<button onclick="loadVideo()">Select</button>
 		</div>
 
 	</body>
-
+	<script type="text/javascript">
+		function loadVideo() {
+			var videoPath = document.getElementById("videoPath").value;
+			localStorage.setItem("videoPath", videoPath);
+			window.location.replace("https://edij.co.uk/testArea/myAnnotate.html");
+		}
+	</script>
 </html>
