--- a/AppV2/myAnnotate.html
+++ b/AppV2/myAnnotate.html
@@ -54,6 +54,18 @@
                 <button id="fs" type="button" class="sbut" data-state="go-fullscreen">Fullscreen</button>
             </div>
         </figure>
+        <button id="print" style="margin-left: 150px" type="button" onclick="printAnnotations()">Print Annotation Data</button>
+        <button id="print" style="margin-left: 150px" type="button" onclick="printCSV()">Print Annotation Data as CSV</button>
+        <div id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <div id="modal-inner">
+                </div>
+            </div>
+
+        </div>
         <!-- Firebase Database Setup -->
         <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
