--- a/AppV2/myAnnotate.html
+++ b/AppV2/myAnnotate.html
@@ -4,41 +4,35 @@
         <meta charset="utf-8" />
         <title>Video Player</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="myAnnotate.css" />
+        <link rel="stylesheet" href="myAnnotate.css" />                                 <!-- STYLESHEET -->
 
-        <!--[if lt IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv-printshiv.min.js" type="text/javascript"></script><![endif]-->
     </head>
     <body>
         <h1>Video Player</h1>
 
-        <div id="create-new-box">
+        <div id="create-new-box">                                   <!-- THIS IS THE LOCATION WHERE NEW LABELS AND ANNOTATIONS ARE MADE -->
             <button id="create-new">CREATE NEW LABEL</button>
             <div id="new-labels">
 
                 <div id="label-home">
 
-                    <!--<subdiv class="subdiv"></subdiv>
-                    <subdiv class="subdiv"></subdiv>
-                    <subdiv class="subdiv"></subdiv>
-                    <subdiv class="subdiv"></subdiv>
-                    <subdiv class="subdiv"></subdiv>-->
                 </div>
 
                 <div id="new-new"></div>
             </div>
         </div>
 
-        <figure id="videoContainer" data-fullscreen="false">
+        <figure id="videoContainer" data-fullscreen="false">        <!-- THE VIDEO PLAYER -->
             <div id='vid-div'>
                 <video id="video" src="https://ece46medsrv.ece.unm.edu/non_irb_videos/Antonia/BackCameraClips/Eating1Round1_q2.mp4" class="video">
                 </video>
             </div>
 
-            <div id="video-controls" class="controls" data-state="hidden">
+            <div id="video-controls" class="controls" data-state="hidden">                  <!-- VIDEO PLAYER CONTROLS -->
                 <button id="playpause" type="button" data-state="play">Play/Pause</button>
                 <button id="stop" type="button" data-state="stop">Stop</button>
 
-                <div id="current-time"></div>
+                <div id="current-time"></div>                                           <!-- VIDEO CURRENT TIME IS UPDATED FROM JQUERY FUNCTION AT BOTTOM OF PAGE -->
 
                 <div class="progress">
                     <progress id="progress" value="0" min="0">
@@ -54,7 +48,7 @@
                 <button id="fs" type="button" class="sbut" data-state="go-fullscreen">Fullscreen</button>
             </div>
         </figure>
-        <button id="print" style="margin-left: 150px" type="button" onclick="printAnnotations()">Print Annotation Data</button>
+        <button id="print" style="margin-left: 150px" type="button" onclick="printAnnotations()">Print Annotation Data</button>  <!-- PRINT ANNOTATION DATA-->
         <button id="print" style="margin-left: 150px" type="button" onclick="printCSV()">Print Annotation Data as CSV</button>
         <div id="myModal" class="modal">
 
@@ -74,7 +68,7 @@
         <script src="script2.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-        <script>
+        <script> //GETS VIDEO DURATION AND SETS RIGHT SIDE COUNTER 
             window.setInterval(function(t){
                 if (video.readyState > 0) {
                     var duration = $('#vid-duration').get(0);
@@ -85,7 +79,7 @@
             },500);
         </script>
 
-        <script>
+        <script> //COUNTER THAT DISPLAYS VIDEO CURRENT TIME
             var vid = document.getElementById("video");
             $("#progress").on("click", function(e){
                 var offset = $(this).offset();
