--- a/AppV2/myAnnotate.html
+++ b/AppV2/myAnnotate.html
@@ -65,10 +65,11 @@
         <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
         <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
 
+        <script src="app_config.js"></script>
         <script src="script2.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-        <script> //GETS VIDEO DURATION AND SETS RIGHT SIDE COUNTER 
+        <script> //GETS VIDEO DURATION AND SETS RIGHT SIDE COUNTER
             window.setInterval(function(t){
                 if (video.readyState > 0) {
                     var duration = $('#vid-duration').get(0);
