--- a/loadFileTree/loadPage.html
+++ b/loadFileTree/loadPage.html
@@ -56,6 +56,7 @@
 
 		</style>
 
+		<script src="../app_config.js"></script>
 		<script src="jquery.js" type="text/javascript"></script>
 		<script src="jqueryFileTree.js" type="text/javascript"></script>
 		<link href="jqueryFileTree.css" rel="stylesheet" type="text/css" media="screen" />
@@ -64,9 +65,9 @@
 
 			$(document).ready( function() {
 
-				$('#fileTree').fileTree({ root: '/home/edijco5/public_html/testArea/database/', folderEvent: 'click', expandSpeed: 300, collapseSpeed: 300, multiFolder: true }, function(file) {
+				$('#fileTree').fileTree({ root: fileTreeServer, folderEvent: 'click', expandSpeed: 300, collapseSpeed: 300, multiFolder: true }, function(file) {
 					var videoPath = document.getElementById("videoPath");
-            		videoPath.value = file.replace("/home/edijco5/public_html/testArea/database/","https://ece46medsrv.ece.unm.edu/");
+            		videoPath.value = file.replace(fileTreeServer, annotationServer);
 				});
 
 			});
@@ -96,7 +97,7 @@
 		function loadVideo() {
 			var videoPath = document.getElementById("videoPath").value;
 			localStorage.setItem("videoPath", videoPath);
-			window.location.replace("https://edij.co.uk/testArea/myAnnotate.html");
+			window.location.href = annotationPageAddress;
 		}
 	</script>
 </html>
