--- a/app_release/fileTree/loadPage.html
+++ b/app_release/fileTree/loadPage.html
@@ -97,7 +97,7 @@
 		function loadVideo() {
 			var videoPath = document.getElementById("videoPath").value;
 			localStorage.setItem("videoPath", videoPath);
-			window.location.href = annotationPageAddress;
+			window.location.href = annotationPage;
 		}
 	</script>
 </html>
