--- a/app_release/annotationPage.html
+++ b/app_release/annotationPage.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Video Player</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="myAnnotate.css" />                                 <!-- STYLESHEET -->
+        <link rel="stylesheet" href="annotationPage.css" />                                 <!-- STYLESHEET -->
 
     </head>
     <body>
@@ -66,7 +66,7 @@
         <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
 
         <script src="app_config.js"></script>
-        <script src="script2.js"></script>
+        <script src="annotationPage.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
         <script> //GETS VIDEO DURATION AND SETS RIGHT SIDE COUNTER
